# sqlcipher3

./: .gitignore  .travis.yml  MANIFEST.in  README.md  conanfile.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yaml  tests.yaml  wheels.yaml
build-scripts/: README  _build_wheels.sh  build.sh  cleanup.sh
lib/: __init__.py  dbapi2.py
sqlcipher3/: __init__.py  dbapi2.py
src/: blob.h  connection.h  prepare_protocol.c  statement.h  util.h
test/: backup.py  dbapi.py  factory.py  hooks.py  regression.py  transactions.py  ttypes.py  userfunctions.py
tests/: backup.py  dbapi.py  factory.py  hooks.py  regression.py  transactions.py  ttypes.py  userfunctions.py
